--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -83,7 +83,7 @@ const t = useTranslations(lang);
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="700">
             <div class="tech-icon">
-              <img src="/images/tech/csharp-new.svg" alt="C#" width="40" height="40" loading="lazy" />
+              <img src="/images/tech/csharp-improved.svg" alt="C#" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">C#</div>
           </div>
@@ -119,13 +119,13 @@ const t = useTranslations(lang);
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1000">
             <div class="tech-icon">
-              <img src="/images/tech/docker-new.svg" alt="Docker" width="40" height="40" loading="lazy" />
+              <img src="/images/tech/docker-improved.svg" alt="Docker" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Docker</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1050">
             <div class="tech-icon">
-              <img src="/images/tech/aws-new.svg" alt="AWS" width="40" height="40" loading="lazy" />
+              <img src="/images/tech/aws-improved.svg" alt="AWS" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">AWS</div>
           </div>
@@ -143,25 +143,25 @@ const t = useTranslations(lang);
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1200">
             <div class="tech-icon">
-              <img src="/images/tech/jira-new.svg" alt="Jira" width="40" height="40" loading="lazy" />
+              <img src="/images/tech/jira-improved.svg" alt="Jira" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Jira</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1250">
             <div class="tech-icon">
-              <img src="/images/tech/azure-devops.svg" alt="Azure DevOps" width="40" height="40" loading="lazy" />
+              <img src="/images/tech/azure-devops-improved.svg" alt="Azure DevOps" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Azure DevOps</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1300">
             <div class="tech-icon">
-              <img src="/images/tech/azure-cosmos-db.svg" alt="Azure Cosmos DB" width="40" height="40" loading="lazy" />
+              <img src="/images/tech/azure-cosmos-db-improved.svg" alt="Azure Cosmos DB" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Cosmos DB</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1350">
             <div class="tech-icon">
-              <img src="/images/tech/azure-functions.svg" alt="Azure Functions" width="40" height="40" loading="lazy" />
+              <img src="/images/tech/azure-functions-improved.svg" alt="Azure Functions" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Azure Functions</div>
           </div>
