Add improved .NET icon

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -89,7 +89,7 @@ const t = useTranslations(lang);
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="750">
             <div class="tech-icon">
-              <img src="/images/tech/dotnet.svg" alt=".NET" width="40" height="40" loading="lazy" />
+              <img src="/images/tech/dotnet-improved.svg" alt=".NET" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">.NET</div>
           </div>
