Replace Cosmos DB with DynamoDB in skills section

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -155,9 +155,9 @@ const t = useTranslations(lang);
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1300">
             <div class="tech-icon">
-              <img src="/images/tech/azure-cosmos-db-improved.svg" alt="Azure Cosmos DB" width="40" height="40" loading="lazy" />
+              <img src="/images/tech/dynamodb.svg" alt="Amazon DynamoDB" width="40" height="40" loading="lazy" />
             </div>
-            <div class="tech-name">Cosmos DB</div>
+            <div class="tech-name">DynamoDB</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1350">
             <div class="tech-icon">
